--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -7,9 +7,9 @@ body{
 h3{
     font-size: 2rem;
 }
-h2,h3{
+h2,h3,h4{
     letter-spacing: 0.3rem;
 }
-h1,h3{
+h1,h3,h4{
     text-transform: uppercase;
 }
