--- a/assets/css/sections.css
+++ b/assets/css/sections.css
@@ -12,11 +12,14 @@ section{
 }
 a{
     text-decoration: none;
-    color:var(--white)
+    color:var(--white);
+    padding: 0 10px;
+    transition: 0.4s ease;
 }
 a:hover{
   opacity: 0.25;
-  transition: 0.4s ease;
+  
+  cursor: pointer;
 }
 hr{
     height: 0.1rem;
