--- a/assets/css/skillset.css
+++ b/assets/css/skillset.css
@@ -13,7 +13,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 1rem;
-    margin: 1rem;
+    margin: 2rem;
 }
 .Skillset > div > figure{
     position: relative;
@@ -57,4 +57,14 @@
     .Skillset  img{
         border-radius: 3rem;
     }
+}
+@media  screen and (min-width:1000px) {
+    .Skillset  img{
+        width: 200px;
+        height: 140px;
+    }
+    .Skillset > div{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+
 }
