--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,88 +10,218 @@
     --black:#323333;
     --black:#2a2b2b;
 }
-
-.Portfolio img{
-  width: 100%;
- height: 100%;
- transition: all 0.4s ease-in;
- opacity: 0.8;
+.main-content{
+   margin-top: 15px; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-.Portfolio figure{
-    position:relative;
+.Portfolio .card-1{
+    position: relative;
+    width: 300px;
+    height: 350px;
+    border-radius: 14px;
+    z-index: 1111;
     overflow: hidden;
-    border-radius: 7px;
-    box-shadow: 0px 15px 25px rgba(12, 12, 12, 0.193);
-    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-.Portfolio figure .info{
+.bg {
     position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(104, 36, 160, 0.384);
+    top: 5px;
+    left: 5px;
+    width: 290px;
+    height: 340px;
+    z-index: 2;
+    background: black;
+    backdrop-filter: blur(24px);
+    border-radius: 10px;
     overflow: hidden;
-    opacity: 0;
-    visibility: hidden;
-    text-align: center;
-    transition: all 0.4s ease-in;
-}
-.Portfolio figure:hover > .info{
+    /* outline: 2px solid white; */
+  }
+  
+  .blob {
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-color:  #ffbb66;
     opacity: 1;
-    visibility: visible;
-}
-.Portfolio figure:hover > img{
-    transform: scale(1.5);
-}
-.Portfolio figure:hover .info h4{
-    margin-top:40px;
-    margin-bottom: 15px;
-}
-.Portfolio figure .info h4{
-    transition: all 0.5s ease-in;
-}
-.Portfolio figure .info button {
-    background-color: rgba(117, 114, 114, 0.404);
-    border-radius: 5px;
-    border: 2px solid rgba(233, 228, 228, 0.452);
-    transition: all 0.3s ease-in;
-    color: #ffff;
-}
-.Portfolio figure .info button:hover{
-    background-color: rgba(137, 96, 184, 0.473);
-    cursor: pointer;
-    color: #2a2b2b;
-    border: 2px solid rgba(137, 96, 184, 0.473);
-}
+    filter: blur(20px);
+    animation: blob-bounce 5s infinite ease;
+  }
+  
+  @keyframes blob-bounce {
+    0% {
+      transform: translate(-100%, -100%) translate3d(0, 0, 0);
+    }
+  
+    25% {
+      transform: translate(-100%, -100%) translate3d(100%, 0, 0);
+    }
+  
+    50% {
+      transform: translate(-100%, -100%) translate3d(100%, 100%, 0);
+    }
+  
+    75% {
+      transform: translate(-100%, -100%) translate3d(0, 100%, 0);
+    }
+  
+    100% {
+      transform: translate(-100%, -100%) translate3d(0, 0, 0);
+    }
+  }
+  .img-header {
+    position: relative;
+    background-image: url(../img/proyecto1.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 25px;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    border-radius: 0.75rem;
+    height: 100px;
+    transition: .3s ease;
+  }
+  .pTwo{
+    background-image: url(../img/proyecto2.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .pThree{
+    background-image: url(../img/proyecto3.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover
+  }
+  .pFour{
+    background-image: url(../img/proyecto4.jpg.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover
+  }
+  .pFive{
+    background-image: url(../img/proyecto5.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover
+  }
+  .pSix{
+    background-image: url(../img/proyecto6.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover
+  }
+  .img-header:hover{
+    transform: translateY(-15%);
+    box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px, rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
+  }
+  
+  .info {
+    border: none;
+    padding:0;
+    text-align: center;
 
+  }
+  
+  .title, p {
+    color: var(--white);
+    line-height: 1.375;
+    font-weight: 400;
+    font-size: 15px;
+    margin-bottom: 0.5rem;
+  }
+  p{
+    font-size: 12px;
+    margin-bottom: 5px;
+  }
+  .footer {
+    padding: 15px;
+    border-top: 1px solid rgb(236 239 241);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+    background-color: rgba(151, 157, 162, 0);
+  }
+  
+  .tag {
+    font-weight: 300;
+    font-size: .75rem;
+    display: block;
+  }
+  
+  .action{
+    padding: 5px 2px;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    cursor: pointer;
+    color: #ffbb66;
+    transition: all 1000ms;
+    font-size: 15px;
+    position: relative;
+    overflow: hidden;
+    outline: 2px solid #ffbb66;
+    background-color: #2a2b2b00;
+  }
+  .action a:hover{
+    color: #000000;
+  }
+  .action:hover {
+    color: #000000;
+    transform: scale(1);
+    outline: 2px solid #ffbb66;
+    box-shadow: 4px 5px 17px -4px #ffbb66;
+  }
+  
+  .action::before {
+    content: "";
+    position: absolute;
+    left: -50px;
+    top: 0;
+    width: 0;
+    height: 100%;
+    background-color: #ffbb66;
+    transform: skewX(45deg);
+    z-index: -1;
+    transition: width 1000ms;
+  }
+  
+  .action:hover::before {
+    width: 250%;
+  }
+  
 @media screen and (min-width:700px){
-    .Portfolio figure{
-        width: 70%;
-        height: 70%;
-        margin-right: auto;
-        margin-left: auto;
-    }
-    .Portfolio figure:hover .info h4{
-        margin-top:60px;
-        margin-bottom: 15px;
-    }
-    .Portfolio figure:hover .info{
-        font-size: 25px;
+    .main-content{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-left: 50px;
     }
 }
 @media screen and (min-width:1000px){
-    .Portfolio figure{
-        width: 50%;
-        height: 32%;
-        margin-right: auto;
-        margin-left: auto;
-    }
-    .Portfolio figure:hover .info h4{
-        margin-top:60px;
-        margin-bottom: 15px;
-    }
-    .Portfolio figure:hover .info{
-        font-size: 25px;
+    .main-content{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-left: 120px;
     }
 }
+@media screen and (min-width:1200px){
+    .main-content{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
 
